force-app/main/default/objects/Candidate__c/fields/Hotlist__c.field-meta.xml
<CustomField>
    <fullName>Hotlist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Hotlist</description>
    <label>Hotlist</label>
    <referenceTo>Hotlist__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>